--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>You need to change this title.</title>
+		<title>Lab 01: Responsive Flex Layout</title>
 
 		<!-- Change this meta tag to reflect your own information. -->
-		<meta name="author" content="">
+		<meta name="author" content="Tyrrell Dakin">
 		<meta name="description" content="">
 
 		<!-- Google Fonts -->
@@ -21,13 +21,61 @@
 
 	<body>
 		<header>
-
+		<img>
+			<h1 class="header"><img src="img/layout.png" alt="layout">Responsive Flex Layout</h1>
 		</header>
 		<main>
-
+		<h1 class="caption">Fluid & Responsive Flex Items</h1>
+			<div class="wide-flex">
+				<div class="flex-container">
+					<section class="box">
+						<img src="img/Edmonton.png" alt="Edmonton">
+						<h2>
+							SUB-HEADING
+						</h2>
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores, adipisci aspernatur. Aut, nulla, ea recusandae doloremque maxime, nihil dolore omnis accusantium itaque numquam excepturi rerum nam tempore facilis quidem commodi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, suscipit illum labore cupiditate libero explicabo recusandae distinctio, quos adipisci eius necessitatibus reiciendis dolore esse porro! Porro iusto voluptatibus nisi nesciunt.</p>
+					</section>
+					<section class="box">
+						<img src="img/Edmonton.png" alt="Edmonton">
+						<h2>
+							SUB-HEADING
+						</h2>
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores, adipisci aspernatur. Aut, nulla, ea recusandae doloremque maxime, nihil dolore omnis accusantium itaque numquam excepturi rerum nam tempore facilis quidem commodi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, suscipit illum labore cupiditate libero explicabo recusandae distinctio, quos adipisci eius necessitatibus reiciendis dolore esse porro! Porro iusto voluptatibus nisi nesciunt.</p>
+					</section>
+					<section class="box">
+						<img src="img/Edmonton.png" alt="Edmonton">
+						<h2>
+							SUB-HEADING
+						</h2>
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores, adipisci aspernatur. Aut, nulla, ea recusandae doloremque maxime, nihil dolore omnis accusantium itaque numquam excepturi rerum nam tempore facilis quidem commodi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, suscipit illum labore cupiditate libero explicabo recusandae distinctio, quos adipisci eius necessitatibus reiciendis dolore esse porro! Porro iusto voluptatibus nisi nesciunt.</p>
+					</section>
+					<section class="box">
+						<img src="img/Edmonton.png" alt="Edmonton">
+						<h2>
+							SUB-HEADING
+						</h2>
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores, adipisci aspernatur. Aut, nulla, ea recusandae doloremque maxime, nihil dolore omnis accusantium itaque numquam excepturi rerum nam tempore facilis quidem commodi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, suscipit illum labore cupiditate libero explicabo recusandae distinctio, quos adipisci eius necessitatibus reiciendis dolore esse porro! Porro iusto voluptatibus nisi nesciunt.</p>
+					</section>
+				</div>
+				<aside>
+					<h3>Archive</h3>
+					<p>See more posts like these:</p>
+					<ul>
+						<li>January</li>
+						<li>December</li>
+						<li>November</li>
+						<li>October</li>
+						<li>September</li>
+						<li>August</li>
+						<li>July</li>
+						<li>June</li>
+					</ul>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ipsam eligendi quisquam a vitae! Optio a excepturi possimus molestias error! Totam, esse ipsum. Necessitatibus repellendus ipsum officiis vel ratione blanditiis.</p>
+				</aside>
+			</div>
 		</main>
 		<footer>
-			
+			For Educational Purposes Only  &copy; 2022 | <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">CSS Tricks: A Complete Guide To Flexbox</a>
 		</footer>
 	</body>
 </html>
